Viewport and JS mobile fix

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Vici - Professional video editing platform with quality enhancement, templates, and effects">
     <meta name="theme-color" content="#DC2626">
